[gd_scene load_steps=3 format=3 uid="uid://damywq73s0gf6"]

[ext_resource type="Script" uid="uid://dqmkaro6qoh8a" path="res://scripts/mainmenu/charactercreator/race_confirm.gd" id="1_2883y"]
[ext_resource type="Texture2D" uid="uid://gap08bo5upnl" path="res://assets/background/characterbg.png" id="2_yxngu"]

[node name="RaceConfirm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2883y")

[node name="Characterbg" type="Sprite2D" parent="."]
scale = Vector2(1.25, 1.05469)
texture = ExtResource("2_yxngu")
centered = false

[node name="ButtonPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -452.0
offset_top = -96.0
offset_right = 151.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 20
alignment = 1

[node name="BackButton" type="Button" parent="ButtonPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Go Back"
icon_alignment = 1
expand_icon = true

[node name="StartButton" type="Button" parent="ButtonPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"
icon_alignment = 1
expand_icon = true

[node name="RaceDescription" type="Label" parent="."]
layout_mode = 2
offset_left = 315.0
offset_top = 26.0
offset_right = 953.0
offset_bottom = 964.0
size_flags_horizontal = 0
size_flags_vertical = 0
autowrap_mode = 2

[node name="RaceImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -881.0
offset_top = -974.0
offset_right = -226.0
offset_bottom = -170.0
grow_horizontal = 0
grow_vertical = 0
stretch_mode = 2
